<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MousseCake</string>
    <string name="action_sair">Sair</string>
    <string name="action_conta">Conta</string>
    <string name="action_pedidos">Pedidos</string>
    <string name="action_menu">Menu</string>
    <string name="str_mesa">Mesa</string>
    <string name="str_comanda">Comanda</string>
    <string name="str_entrar">Entrar</string>

    <string-array name="list_dividir">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="list_categorias">
        <item>Bebidas</item>
        <item>Entradas</item>
        <item>Saladas</item>
        <item>Pratos Principais</item>
        <item>Porções</item>
        <item>Bolos</item>
    </string-array>
    <string-array name="list_bebidas">
        <item>Água</item>
        <item>Água com Gás</item>
        <item>Coca Cola</item>
        <item>Fanta Uva</item>
        <item>Sprite</item>
        <item>Itubaina</item>
        <item>Suco de Laranja</item>
        <item>Suco de Morango</item>
    </string-array>

    <string name="str_fechar_conta">Fechar Conta</string>
    <string name="str_sim">Sim</string>
    <string name="str_nao">Não</string>
    <string name="str_dividir">Dividir por</string>
    <string name="str_porcentagem_garcom">10% para o Garçom</string>
    <string name="str_valor_conta">Valor total</string>
    <string name="str_valor_conta_dividido">Valor dividido</string>
    <string name="str_preco">Preço</string>
    <string name="str_sub_total">Valor Parcial</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_confirmar">Confirmar</string>

</resources>