<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextComanda"
        android:layout_alignRight="@+id/editTextComanda"
        android:layout_below="@+id/editTextComanda"
        android:layout_marginTop="32dp"
        android:text="@string/str_entrar" />

    <EditText
        android:id="@+id/editTextComanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMesa"
        android:layout_below="@+id/editTextMesa"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/str_comanda" />

    <EditText
        android:id="@+id/editTextMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/str_mesa" >

        <requestFocus />
    </EditText>

</RelativeLayout>
