<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imgPrato"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/action_menu"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/moussecakethemelight_list_focused_holo" />

    <TextView
        android:id="@+id/textViewItemDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgPrato"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/imgPrato"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPrecoDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgPrato"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imgPrato"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_cancelar"
            style="@style/ButtonMousseCakeThemeLight" />

        <Button
            android:id="@+id/buttonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_confirmar" 
            style="@style/ButtonMousseCakeThemeLight"/>
        
    </LinearLayout>
    


</RelativeLayout>